# open303

./: CMakeLists.txt  LICENSE  README.md  ReadMe.txt
.github/workflows/: create_new_release.yml
Libraries/vstsdk/: README.md
Source/DSPCode/: GlobalDefinitions.h  GlobalFunctions.h  rosic_AcidPattern.cpp  rosic_AcidSequencer.cpp  rosic_AnalogEnvelope.cpp  rosic_AnalogEnvelope.h  rosic_BiquadFilter.cpp  rosic_BiquadFilter.h  rosic_BlendOscillator.cpp  rosic_BlendOscillator.h  rosic_Complex.cpp  rosic_Complex.h  rosic_DecayEnvelope.h  rosic_EllipticQuarterBandFilter.h  rosic_FunctionTemplates.h  rosic_LeakyIntegrator.h  rosic_MidiNoteEvent.cpp  rosic_MidiNoteEvent.h  rosic_NumberManipulations.h  rosic_OnePoleFilter.h  rosic_Open303.cpp  rosic_Open303.h  rosic_RealFunctions.h  rosic_TeeBeeFilter.cpp  rosic_TeeBeeFilter.h  rosic_WaveTable.cpp  rosic_WaveTable.h
Source/VSTPlugIn/: Open303VST.cpp  Open303VST.h
